# zoomer-guide-to-c

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  SConstruct  meson.build  zoomer-guide-to-c-v0.1.1.pdf.asc  zoomer-guide-to-c.pdf-v0.1.0.pdf.asc
lib/: meson.build
lib/zgtc/: SConscript  meson.build
lib/zgtc/lua/: zgtc.lua
lib/zgtc/python/: .gitignore  pyproject.toml
lib/zgtc/python/zgtc/: pygments.py
site_scons/site_tools/: CommandOutput.py  CommandSubst.py  Release.py
src/: SConscript  _start.tex  copyright.tex  hello-world.tex  meson.build  preamble.tex  preface.tex  solutions.tex  thank-you.tex  title.tex  variable-basics-and-control-flow.tex  vcs-tag.tex  version.tex.in  zgtc.lua  zoomer-guide-to-c.tex
src/hello-world.d/: SConscript  compile-error-mock.c  compile-error.c  compile-error.sh.in  compile-hello-world-epoch-mock.sh.in  compile-hello-world-epoch.sh.in  compile-hello-world-mock.sh.in  compile-hello-world.sh.in  compile-unsigned-blunder-mock.sh.in  compile-unsigned-blunder.sh.in  compile-warning-disable-mock.sh.in  compile-warning-disable.sh.in  compile-warning-mock.c  compile-warning.c  compile-warning.sh.in  hello-world-epoch-mock.c  hello-world-epoch.c  hello-world.c  run-compile-warning.sh  run-hello-world-epoch.sh  run-unsigned-blunder.sh  unsigned-blunder.c
src/hello-world.d/exercises/: 01.tex  02.tex  03.tex  04.tex  SConscript
src/hello-world.d/solutions/: 01.tex  02.tex  03.tex  04.tex
src/preface.d/: Q_rsqrt.c  SConscript  meson.build
