# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright (C) 2023  Jacob Koziej <jacobkoziej@gmail.com>

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'zgtc'
version = '0.1.0'
dependencies = [
    'Pygments >= 2.15.1',
    'pygments-ansi-color >= 0.3.0',
]

[project.entry-points.'pygments.styles']
ansi-color = 'zgtc.pygments:AnsiColorStyle'
